XWIKI-10850: The "Create new group" field is not consistent with the "Create group" and "Cancel" buttons

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/addnewgroup.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/addnewgroup.vm
@@ -1,8 +1,8 @@
 <div id="addnewgroup">
-<span style="padding-left:13px;">$services.localization.render('rightsmanager.createnewgroup')</span>
+<span>$services.localization.render('rightsmanager.createnewgroup')</span>
 <form method="post" onsubmit="return false;">
 <div>
-<span style="padding-left:13px;"><input type="text" name="newgroup" value="" id="newgroupi" /></span>
+<span><input type="text" name="newgroup" value="" id="newgroupi" /></span>
 <span class="buttonwrapper"><input class="button" type="submit" value="$services.localization.render('rightsmanager.creategroup')" onclick="new Ajax.Request(new XWiki.Document(this.form.newgroup.value, 'XWiki').getURL('save', 'form_token=$!services.csrf.token&template=XWiki.XWikiGroupTemplate'), { onFailure: function(transport) { alert('$services.localization.render('rightsmanager.groupexist').replaceAll('"', '&quot;')'.replace('__name__', $('newgroupi').value)); }, onSuccess: function(transport) { window.lb.lbSaveForm(); } });" /></span>
 <span class="buttonwrapper"><input class="button" type="submit" name="formactioncancel" value="$services.localization.render('cancel')" onclick=" window.lb.lbHide(); window.lb.lbClearData(); return false;"/></span>
 </div>
