[misc] Add missing documentation
(cherry picked from commit 108d2c88b75d22b639d88cea5be1761d1d7916ca)

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
@@ -346,6 +346,10 @@ xwiki.authentication.logoutpage=(/|/[^/]+/|/wiki/[^/]+/)logout/*
 #-# HTTP status code to sent when the authentication failed.
 xwiki.authentication.unauthorized_code=200
 
+#-# Used by some authenticators (like com.xpn.xwiki.user.impl.xwiki.AppServerTrustedAuthServiceImpl)
+#-# to indicate that the users should be created. In this kind of authenticator the user are not created by default.
+#-# Must be set to "empty".
+# xwiki.authentication.createuser=empty
 
 #---------------------------------------
 # XWiki Syntax 1.0 Rendering Engine
