XWIKI-10850: The "Create new group" field is not consistent with the "Create group" and "Cancel" buttons * Added xform standard * Changed the style for Cancel button

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/lightbox/lightbox.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/lightbox/lightbox.css
@@ -67,7 +67,7 @@
 #lb {
   left: 0;
   margin-left: 0;
-  width: auto;
+  width: 100%;
 }
 
 @media (min-width: 768px) { /* Should be: @screen-sm-min */
