--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/addnewgroup.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/addnewgroup.vm
@@ -1,10 +1,16 @@
 <div id="addnewgroup">
-<span>$services.localization.render('rightsmanager.createnewgroup')</span>
-<form method="post" onsubmit="return false;">
-<div>
-<span><input type="text" name="newgroup" value="" id="newgroupi" /></span>
-<span class="buttonwrapper"><input class="button" type="submit" value="$services.localization.render('rightsmanager.creategroup')" onclick="new Ajax.Request(new XWiki.Document(this.form.newgroup.value, 'XWiki').getURL('save', 'form_token=$!services.csrf.token&template=XWiki.XWikiGroupTemplate'), { onFailure: function(transport) { alert('$services.localization.render('rightsmanager.groupexist').replaceAll('"', '&quot;')'.replace('__name__', $('newgroupi').value)); }, onSuccess: function(transport) { window.lb.lbSaveForm(); } });" /></span>
-<span class="buttonwrapper"><input class="button" type="submit" name="formactioncancel" value="$services.localization.render('cancel')" onclick=" window.lb.lbHide(); window.lb.lbClearData(); return false;"/></span>
-</div>
+<form method="post" onsubmit="return false;" class="xform">
+<dl>
+<dt>
+<label for="newgroupi">$services.localization.render('rightsmanager.createnewgroup')</label>
+</dt>
+<dd>
+<input type="text" name="newgroup" value="" id="newgroupi">
+</dd>
+</dl>
+<p>
+<span class="buttonwrapper"><input class="button" type="submit" value="Create group" onclick="new Ajax.Request(new XWiki.Document(this.form.newgroup.value, 'XWiki').getURL('save', 'form_token=$!services.csrf.token&template=XWiki.XWikiGroupTemplate'), { onFailure: function(transport) { alert('__name__ cannot be used for the group name, as another document with this name already exists.'.replace('__name__', $('newgroupi').value)); }, onSuccess: function(transport) { window.lb.lbSaveForm(); } });"></span>
+<span class="buttonwrapper"><input class="button secondary" type="submit" name="formactioncancel" value="Cancel" onclick=" window.lb.lbHide(); window.lb.lbClearData(); return false;"></span>
+</p>
 </form>
 </div>
